begining of portfoilo

--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
         <h2 class="projects-title">Some of my Recent Projects</h2>
         <div class="projects-container">
             <div class="project-container project-card">
-                <img src="assets/image/weather screenshot for portfolio.png" alt="weather-tracker" loading="lazy" class="project-pic" />
+                <img src="assets/image/weather screenshot for portfolio.png" alt="weather-tracker" loading="lazy"
+                    class="project-pic" />
                 <h3 class="project-title">Weather Dashboard</h3>
                 <p class="project-details">
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas
@@ -96,35 +97,82 @@
                     Alias!
 
                 </p>
-                <a href="#" target="_blank" class="https://brandonpena97.github.io/Weather-Dashboard/">Check it Out</a>
+                <a href="https://brandonpena97.github.io/Weather-Dashboard/">Check it Out</a>
             </div>
             <div class="project-container project-card">
-                <img src="assets/image/note taker screenshot 1.png" alt="note-taker" loading="lazy" class="project-pic" />
+                <img src="assets/image/note taker screenshot 1.png" alt="note-taker" loading="lazy"
+                    class="project-pic" />
                 <h3 class="project-title">Note Taker app</h3>
                 <p class="project-details">
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas
                     ratione vel inventore labore commodi modi quos culpa aut saepe!
                     Alias!
                 </p>
-                <a href="#" target="_blank" class="project-link">Check it Out</a>
+                <a href="https://mynotetakerappbp.herokuapp.com/">Check it Out</a>
             </div>
-            <div class="project-container project-card">
-                <img src="assets/image/password generator.png" alt="password-generator" loading="lazy" class="project-pic" />
-                <h3 class="project-title">Password Generator</h3>
-                <p class="project-details">
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas
-                    ratione vel inventore labore commodi modi quos culpa aut saepe!
-                    Alias!
-                </p>
-                <a href="#" target="_blank" class="project-link">Check it Out</a>
-            </div>
+        </div>
+        <div class="project-container project-card">
+            <img src="assets/image/password generator.png" alt="password-generator" loading="lazy"
+                class="project-pic" />
+            <h3 class="project-title">Password Generator</h3>
+            <p class="project-details">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas
+                ratione vel inventore labore commodi modi quos culpa aut saepe!
+                Alias!
+            </p>
+            <a href="https://brandonpena97.github.io/Password-Generator/">Check it Out</a>
+        </div>
         </div>
     </section>
 
 
     <!-- Contact section -->
+    <section class="contact" id="contact">
+        <h2>Get In Touch With Me</h2>
+        <div class="contact-form-container">
+            <div class="contact-form">
+                <form action="https://formspree.io/f/xyylngw" method="POST">
+                    <div class="form-control">
+                        <label for="name">Name</label>
+                        <input type="text" id="name" name="sender-name" placeholder="Enter Your Name"
+                            class="input-field" required />
+                    </div>
+                    <div class="form-control">
+                        <label for="email">Email</label>
+                        <input type="email" id="email" name="sender-email" placeholder="Enter Your Email"
+                            class="input-field" required />
+                    </div>
+                    <div class="form-control">
+                        <label for="message">Message</label>
+                        <textarea id="message" cols="60" rows="10" placeholder="Enter Your Message" name="message"
+                            class="input-field" required></textarea>
+                    </div>
+                    <input type="submit" value="Submit" id="submit-btn" class="submit-btn" />
+                </form>
+            </div>
+        </div>
+    </section>
 
     <!-- Social accounts - Fixed to the right -->
+    <div class="socials">
+        <a href="#" target="_blank"
+          ><img
+            src="assets/icons/icons8-twitter-30.png"
+            alt="Twitter"
+            loading="lazy"
+            class="socicon"
+        /></a>
+        <a href="#" target="_blank"
+          ><img
+            src="assets/icons/icons8-linkedin-30.png"
+            alt="Linkedin"
+            loading="lazy"
+            class="socicon"
+        /></a>
+        <a href="#" target="_blank"
+          ><img src="assets/icons/icons8-github-30.png" alt="Github" class="socicon"
+        /></a>
+
 
     <!-- Scroll to top -->
 
